# apollo-client-python

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
apollo/: apollo_client.py  python_2x.py  python_3x.py  util.py
demo/: demo.py  demo2.py  demo_listener.py  demo_secret.py  main.py
