[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apollo-client-python"
version = "0.1.0.2"
description = "apollo-client-python - Python Client for Ctrip's Apollo"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
]

classifiers = [
  "Programming Language :: Python :: 3",
]

[tool.hatch.build]
exclude = [
  "/.*",
  "/docs",
  "/tests",
  "/scripts",
  "/venv",
  "/demo",
  "__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["apollo"]

[tool.hatch.envs.default.scripts]
clean = "rm -rf dist build *.egg-info"

dist-list = "tar -tf dist/*.tar.gz && unzip -l dist/*.whl"

test = "pytest"

lint = "ruff check . --fix"

format = "ruff format ."

check = [
  "lint",
  "format"
]
